# Chess-AI

./: CMakeLists.txt
.cache/clangd/index/: Board.hpp.189BFC587FD26BF9.idx  Piece.h.C17ED22B4F2940DA.idx  Piece.hpp.4564738D890841EA.idx  main.cpp.81715BBBB4466160.idx
include/: Board.hpp  Piece.hpp  Setup.hpp
src/: main.cpp  piece.cpp  setup.cpp
